Auth Added for advance security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/fintech_wallet
 spring.data.mongodb.database=fintech_wallet
 
 
+spring.data.mongodb.auto-index-creation=true
+logging.level.org.springframework.security=DEBUG
+logging.level.com.payment.wallet.security=INFO
+
 
