--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.application.name=wallet
 server.port=8080  
 
 #  MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/fintech_wallet
+# spring.data.mongodb.uri=mongodb://localhost:27017/fintech_wallet
 spring.data.mongodb.database=fintech_wallet
+spring.data.mongodb.uri=mongodb://root:password@db:27017/walletdb
 
 
 spring.data.mongodb.auto-index-creation=true
